# lotus-calendar

./: .env.example  .gitignore  Cargo.toml  README.md  package.json
scripts/: script.rhai
src/: calendar.ts  config.rs  events.rs  index.ts  main.rs  oauthServer.ts  parser.rs  rruleParser.ts  session.rs
src/caldav/: adapter.rs  caldavContext.ts  createEvent.ts  fetchAndSaveEvents.ts  google.rs  index.ts  mod.rs  removeEvent.ts
src/caldav/templates/: calendar_query.xml  mod.rs
src/components/: Layout.tsx  LoggedIn.tsx  Login.tsx
src/templates/: logged-in.html  login.html
